--- a/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
+++ b/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
@@ -92,6 +92,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.20622.1351, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -109,6 +110,7 @@
       <HintPath>..\packages\System.Spatial.5.7.0\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -148,6 +150,10 @@
     <Compile Include="ServiceBus\ExportDataAsset.cs" />
     <Compile Include="ServiceBus\SendServiceBusTopicStep.cs" />
     <Compile Include="ServiceBus\ServiceBusData.cs" />
+    <Compile Include="sshSteps\ISSHBridge.cs" />
+    <Compile Include="sshSteps\sshCommandConfig.cs" />
+    <Compile Include="sshSteps\sshCommandStep.cs" />
+    <Compile Include="sshSteps\waitShhProcess.cs" />
     <Compile Include="WaterMark\WaterMarkData.cs" />
     <Compile Include="WaterMark\WaterMarkEncoderStep.cs" />
   </ItemGroup>
@@ -158,7 +164,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
