--- a/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
+++ b/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
@@ -128,6 +128,7 @@
       <HintPath>..\packages\System.Spatial.5.7.0\lib\net40\System.Spatial.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -145,6 +146,9 @@
     <Compile Include="Base\httpNotificationStep.cs" />
     <Compile Include="Base\SelectAssetByStep.cs" />
     <Compile Include="Base\SetupAMSAccountStep.cs" />
+    <Compile Include="CognitiveServices\AzureMLTextAnalyticsClient.cs" />
+    <Compile Include="CognitiveServices\IAzureMLTextAnalyticsClient.cs" />
+    <Compile Include="CognitiveServices\TextAnalitycsStep.cs" />
     <Compile Include="Control\MediaButlerCustomStep.cs" />
     <Compile Include="MediaAnalytics\AzureMediaIndexer2Step.cs" />
     <Compile Include="miscellaneous\ListAssetFilesOnRequestLogStep.cs" />
