--- a/MediaButler.BaseProcess/packages.config
+++ b/MediaButler.BaseProcess/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.205111437" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.4" targetFramework="net45" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.4" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net45" />
@@ -16,7 +18,7 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net45" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
-  <package id="windowsazure.mediaservices" version="3.7.0.1" targetFramework="net45" />
+  <package id="windowsazure.mediaservices" version="4.1.0.1" targetFramework="net45" />
   <package id="WindowsAzure.ServiceBus" version="3.1.4" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net45" />
 </packages>
