--- a/MediaButlerWebJobHost/App.config
+++ b/MediaButlerWebJobHost/App.config
@@ -3,11 +3,11 @@
   <connectionStrings>
     <!-- The format of the connection string is "DefaultEndpointsProtocol=https;AccountName=NAME;AccountKey=KEY" -->
     <!-- For local execution, the value can be set either in this config file or through environment variables -->
-    <add name="AzureWebJobsDashboard" connectionString="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
-    <add name="AzureWebJobsStorage" connectionString="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
+    <add name="AzureWebJobsDashboard" connectionString="" />
+    <add name="AzureWebJobsStorage" connectionString="" />
   </connectionStrings>
   <appSettings>
-    <add key="MediaButler.ConfigurationStorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
+    <add key="MediaButler.ConfigurationStorageConnectionString" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
@@ -34,6 +34,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
